header.css
.header {
    height: 7vh;
    background-color: black;
    display: flex;
    align-items: center;
}


/***************************** LOGO *****************************/
.logo, .logo img {
    height: 5vh;
}

.logo {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto;

    padding: 1vh;
    column-gap: 1vh;
    width: max-content;
    align-items: center;
}

.logo h1 {
    color: white;
    font-family: "Omnes Black";
    font-size: 3vh;
    line-height: 3vh;
    height: 3vh;
    user-select: none;
    white-space: nowrap;
}

/***************************** NAV BUTTONS *****************************/

.spacer {
    width: 100%;
    height: 1vh;
}

.nav {
    position: relative;
    right: 0;

    color: white;
    align-items: center;
    height: min-content;
    padding: 1vh;
    padding-right: 5vh;
}

.nav p {
    line-height: 3vh;
    height: 3vh;
    font-size: 3vh;
}

/***************************** ARCHIVE DROPDOWN *****************************/

.dropdown {
    display: none;
    background-color: rgb(0, 0, 0);
    min-width: 160px;
    z-index: 1;
    border-radius: 0.5vw;
    width:50%;
    margin: auto;
    user-select: none;
    text-align: center;

    position: absolute;
    top: 4.5vh;
}

#archive:hover {font-weight: 700}
#archive:hover .dropdown {display: block}
#archive {user-select: none;}

.year {
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    background-size: 100%;
    font-size: 3vh;
    color: white;
    font-family: "Omnes Pro Bold";
    user-select: none;
}

#s2021 {background-image: url(https://cdn.reformationfundraising.com/rffcom/2021theme.jpeg)}
#s2022 {background-image: url(https://cdn.reformationfundraising.com/rffcom/2022theme.gif); background-position-y: 100%}
#s2023 {background-image: url(https://cdn.reformationfundraising.com/rffcom/2023theme.jpeg)}
#s2020 {
    background-image: url(https://cdn.reformationfundraising.com/rffcom/2020theme.jpeg);
    background-position-y: 60%;
    border-top-left-radius: 0.5vw;
    border-top-right-radius: 0.5vw;
}
#s2024 {
    background-position-y: 60%;
    background-image: url(https://cdn.reformationfundraising.com/rffcom/2024theme.jpeg);
    border-bottom-left-radius: 0.5vw;
    border-bottom-right-radius: 0.5vw;
    color:black;
}

/***************************** FOOTER *****************************/
.footer {
    height: min-content;
    background-color: black;
    vertical-align: bottom;
    bottom: 0;
    width: 100%;
    display: grid;
    margin-top: 2vw;
    grid-template-columns: 0.1fr 1fr 1fr 1fr 0.1fr;
}

.footer p {
    text-align: center;
    color: white;
    font-size: 1vw;
}

.footer .right-footer-el {
    justify-self: right;
}

.footer .left-footer-el {
    justify-self: left;
}

.footer p a {
    color: white;
}

@media screen and (max-width: 1100px) {
    .logo h1 {
        display: none;
    }

    .footer p {
        font-size: 2vw;
    }
}

